tests/snapshots/integration_test__tests__should_be_able_to_return_from_nested_blocks.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc main() {\n  for value in [1, 2, 3, 4, 5, 6, 7, 8, 9] {\n    out(value.fmt());\n    if value == 4 {\n      exit value;\n    };\n  };\n}\n\nmain();\n\"#)"
---
stdout: "1\n2\n3\n4\n"
stderr: ""
error: ~
exit_code: 4
