tests/snapshots/integration_test__tests__should_be_able_to_write_input_to_file.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nexec `command1` => write(\"file\");\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(Into::<Command>::into(\"command1\").pipe(Command::write(\"file\".to_owned())).unwrap())).return_once(|_|\n                        Ok(CommandResult::new(0, \"\"))).once();\n        })"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
