tests/snapshots/integration_test__tests__should_capture_output_of_command_in_variable.snap
---
source: tests/integration_test.rs
expression: "run_code_with_setup(r#\"\nvar output = exec `command1`;\nout(output);\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run().with(predicate::eq::<Command>(\"command1\".into())).return_once(|_|\n                        Ok(CommandResult::new(0, \"hello!\"))).once();\n        })"
---
stdout: "hello!\n"
stderr: ""
error: ~
exit_code: 0
