tests/snapshots/integration_test__tests__should_continue_in_while_loop.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar index = 0;\nwhile index < 5 {\n    index = index + 1;\n    if index == 2 {\n      continue;\n    };\n    out(fmt(index));\n};\n\"#)"
---
stdout: "1\n3\n4\n5\n"
stderr: ""
error: ~
