tests/snapshots/integration_test__tests__should_error_if_break_called_directly_from_function.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nfunc main() {\n  if false {\n  } else {\n    break;\n  };\n}\n\nmain();\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Break must be used in a loop block
    call_stack:
      - main
exit_code: 103
