tests/snapshots/integration_test__tests__should_error_if_break_called_directly_from_root.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nif true {\n  break;\n};\n\"#, \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: Break statement can only be used from inside a looped block
exit_code: 103
