tests/snapshots/integration_test__tests__should_error_if_command_returns_non_zero_exit_code.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nexec `my_command`;\n\"#, \"\",\n    |executor|\n        {\n            executor.expect_run_pipeline().with(predicate::eq::<Pipeline>([\"my_command\"].into())).return_once(|_|\n                        Ok(PipelineOutput::new(None, Some(69.into())))).once();\n        })"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: "Command returned non-zero exit code: (69)"
    call_stack: []
exit_code: 104
