tests/snapshots/integration_test__tests__should_error_if_continue_called_directly_from_root.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n{\n  continue;\n};\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Control flow options are not allowed in the root block
    call_stack: []
