tests/snapshots/integration_test__tests__should_error_if_function_returns_wrong_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        func test(): string {\n            return 123;\n        }\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error:
  PostProcessError:
    message: "Function has a declared return type of string, but return statement got a type of integer"
exit_code: 103
