tests/snapshots/integration_test__tests__should_error_when_assigning_variable_to_wrong_type.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar variable = \"test\";\nvariable = 42;\n\"#)"
---
stdout: ""
stderr: ""
error:
  ExecutionError:
    message: Can not assign a value of type string to a variable of type integer
    call_stack: []
